# apps/platform/app/Modules/Identity/Infrastructure/Mail/views/password-reset.blade.php
@@ -1,0 +1,7 @@
+Someone asked to reset the password for this email address.
+
+To choose a new password, open this link within {{ $minutes }} minutes:
+
+{!! $link !!}
+
+If you did not ask for this, you can ignore this message. Your password has not been changed, and the link is useless to anyone without access to this mailbox.
